sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:18: error: not found: value echanger
  while(!echanger)
         ^